# Kestrel

./: .cursorrules  .dockerignore  .env.example  .env.telegram.example  .eslintrc.json  .gitignore  .gitleaksignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  KESTREL_100X_ROADMAP.md  KESTREL_FIX_LOG.md  KESTREL_MEMORY.md  LICENSE  MANIFEST.in  Makefile  PROJECT_MANIFEST.md  README.md  RECOVERY_PROGRESS.md  SECURITY.md  SETUP.md  adaptive-flock-golden.txt  adaptive-flock-pytest.txt  agent_modes.py  app.py  architecture.md  build_app.py  cloud_providers.py  configure_claude_vertex.sh  context_collector.py  database.py  docker-compose.yml  docker-output.txt  eslint.config.mjs  golden-output.txt  (+38 more)
.giga/: specifications.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  pull_request_template.md
.kestrel/: tool-catalog.json  tool-catalog.md
benchmark_results/: BENCHMARK_COMPARISON_REPORT.md  CODING_DEEPSEEK_V4PRO_REPORT.md  COMPARISON.md  KESTREL_MEMORY_BENCHMARK.md  UNIFIED_MEMORY_BENCHMARK.md  agent_kimi.json  agent_kimi_v2.json  agent_mock.json  agent_ollama_k2.6.json  agent_ollama_k2.6_retry.json  coding_deepseek_v4pro.json  coding_deepseek_v4pro_aggregate.json  coding_deepseek_v4pro_async_pool.json  coding_deepseek_v4pro_easy.json  coding_deepseek_v4pro_json_patch.json  coding_deepseek_v4pro_lru.json  coding_deepseek_v4pro_template_engine.json  coding_mock.json  coding_test.json  coding_test2.json  coding_test3.json  error_recovery_mock.json  error_recovery_ollama.json  error_recovery_ollama_gemma4b.json  error_recovery_ollama_k2.6_full.json  error_recovery_ollama_k2.6_retry.json  error_recovery_ollama_kimi.json  error_recovery_ollama_kimi_retry.json  error_recovery_ollama_kimi_v2.json  learning_benchmark.json  memory_baseline.json  memory_benchmark_large.json  real_agent_learning.json  real_agent_learning_fresh.json  report.json  report_final.json  report_kimi_k2_6.json  report_mock.json  report_with_error_recovery.json  unified_benchmark.json  (+3 more)
benchmarks/: README.md  agent_benchmark.py  coding_benchmark.py  error_recovery_benchmark.py  learning_benchmark.py  memory_benchmark.py  memory_benchmark_large.py  real_agent_learning_benchmark.py  run_all.py  unified_memory_benchmark.py
config/: agent.example.json  channels.example.json  container_vulnerability_exceptions.json  layers.example.json  python-build-bootstrap.txt  release-build-bootstrap.txt  trivy-dockerfile-ignore.rego
docs/: ARCHITECTURE.md  CODEX_FULL_AGENT_HANDOFF_PROMPT.md  CODEX_HANDOFF_PROMPT.md  CODEX_PRODUCTION_READY_AGENT_PROMPT.md  CONTROLLED_SELF_MODIFICATION.md  CONTROLLED_SELF_MODIFICATION_DEMO.md  DEPLOYMENT.md  FULL_AGENT_SPEC.md  IMPLEMENTATION_PIPELINE.md  IMPLEMENTATION_STATUS.md  Kestrel_E2E_SYSTEM_STATUS_2026-05-23.md  LEARNING_LOOP.md  MEMORY_OPERATIONS.md  MEMORY_TESTING.md  MEMVID_INTEGRATION.md  MV2_CONTEXT_PACKING.md  NESTED_LEARNING_MODEL.md  PRODUCTION_OPERATIONS.md  PRODUCTIZATION_ROADMAP.md  RELEASE_CHECKLIST.md  RUNTIME_WIRING.md  SECURITY.md  TASK_CAPSULES.md  TESTING.md  TEST_MATRIX.md  VALIDATION_PLAN.md  channel-support-matrix.md  deep-scan-architecture-audit.md  desktop-first-migration.md  gateway-ingress-contract.md  platform-capabilities.md  runtime-flags.md  service-ownership.md
examples/: simple_agent_loop.py
examples/golden_repair_demo/: README.md  expected_fix.patch  pyproject.toml
examples/golden_repair_demo/src/demo_math/: __init__.py  calculator.py
examples/golden_repair_demo/tests/: test_calculator.py
frontend/: index.css  index.html  main.js  nginx.conf  package-lock.json  package.json  vite.config.js
golden/: README.md  mv2_context_cases.json
scripts/: __init__.py  apply_adaptive_flock_scheduler_hook.py  apply_adaptive_flock_workbench.py  apply_adaptive_flock_workbench_v2.py  bootstrap_memory.py  check_container_vulnerabilities.py  check_project_metadata.py  clean-worktree.cjs  demo_controlled_self_modification.py  docker-entrypoint.sh  eval_behavior_deltas.py  eval_learning_architecture.py  eval_memory_router.py  generate-web-third-party-notices.mjs  installer-server-supervisor.sh  release_publication_guard.py  run-python-tool.cjs  run-soak.py  run_agent_smoke.py  run_golden_evals.py  run_live_learning_eval.py  run_memory_system_evals.py  run_provider_certification.py  run_validation.py  set-telegram-webhook.sh  setup-launchd.sh  stage_web_release.py  start-telegram-agent.sh  start-telegram-stack.sh  telegram-poller.py  upgrade-kestrel.sh  verify_exact_wheel_install.py  verify_installed_memvid.py  verify_release_payload.py
tests/: _fixtures.py  conftest.py  test_adaptive_flock_control_plane.py  test_adaptive_flock_env_config.py  test_adaptive_flock_preview.py  test_adaptive_flock_provider_update_semantics.py  test_adaptive_flock_run_manager.py  test_adaptive_flock_scheduler_hook.py  test_adaptive_flock_start_failures.py  test_agent_backup.py  test_agent_routing_cancellation.py  test_agent_routing_foundation.py  test_agent_routing_guardrails.py  test_agent_routing_ledger.py  test_agent_routing_metadata.py  test_agent_runtime.py  test_agent_smoke_runner.py  test_behavior_compiler.py  test_behavior_delta.py  test_behavior_delta_extractor.py  test_behavior_delta_ledger.py  test_behavior_delta_replay.py  test_behavior_delta_reporting.py  test_benchmark_runners.py  (+105 more)
(+307 files in other folders)
