[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nested-memvid-agent"
version = "0.3.0.dev0"
description = "Kestrel: a local-first, memory-native AI engineering agent runtime."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Kestrel Contributors" }]
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
runtime = [
  "click>=8.3.3",
  "cryptography>=48.0.1",
  "httplib2>=0.32.0",
  "pillow>=12.3.0",
  "pydantic-settings>=2.14.2",
  "pygments>=2.20.0",
  "python-multipart>=0.0.31",
  "starlette>=1.3.1",
]
memvid = ["memvid-sdk>=2.0", "pillow>=12.3.0"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.39"]
gemini = ["google-genai>=0.3"]
server = ["fastapi>=0.110", "uvicorn>=0.29", "python-multipart>=0.0.31", "starlette>=1.3.1"]
mcp = ["mcp>=1.0", "cryptography>=48.0.1", "httplib2>=0.32.0"]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.10", "bandit>=1.7", "build>=1.2", "fastapi>=0.110", "uvicorn>=0.29", "httpx>=0.27", "pygments>=2.20.0"]

[project.scripts]
nested-memvid = "nested_memvid_agent.cli:main"
nest-agent = "nested_memvid_agent.cli:main"

[project.urls]
Homepage = "https://github.com/John-MiracleWorker/Kestrel"
Repository = "https://github.com/John-MiracleWorker/Kestrel"
Issues = "https://github.com/John-MiracleWorker/Kestrel/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nested_memvid_agent = ["prompts/*.md", "web_dist/index.html", "web_dist/assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
exclude = ["build", "dist"]

[[tool.mypy.overrides]]
module = ["uvicorn"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["numpy", "sentence_transformers"]
ignore_missing_imports = true
