[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kestrel-golden-repair-demo"
version = "0.1.0"
description = "Intentionally broken demo repository for Kestrel's golden repair workflow."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
